app.css: fix line breaks in trademark disclaimer

--- a/src/app.css
+++ b/src/app.css
@@ -209,8 +209,9 @@ button, .button {
     font-size: 12px;
     max-width: 700px;
     position: absolute;
-    bottom: 19px;
+    bottom: 14px;
     color: var(--helium-elevated);
+    white-space: pre-line;
 }
 
 @keyframes main-zoom-blur-in {
